# pricespy

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pricespy.db  pyproject.toml  railyway.json  requirements.txt  run.py  start.sh
.github/workflows/: ci.yml  pages.yml
assets/: README.md  linkedin-content.md  slides.html  video-script.md
backend/: logging_config.py  main.py
docs/: index.html
extension/: content.js  manifest.json  popup.html
ml/: predict.py
release/: README.md  content.js  manifest.json
scarper/: scraper.py
scraper/: collector.py
templates/: index.html
tests/: conftest.py  test_api.py  test_scraper.py
